# rustcheevos

./: Cargo.toml  README.md  rustfmt.toml
crates/rustcheevos/: Cargo.toml
crates/rustcheevos-cli/: Cargo.toml  README.md
crates/rustcheevos-cli/src/: error.rs  lib.rs  main.rs
crates/rustcheevos-cli/src/export/: mod.rs  report.rs
crates/rustcheevos-cli/src/import/: generator.rs  mod.rs  parsing.rs
crates/rustcheevos-cli/src/readme/: hash.rs  mod.rs
crates/rustcheevos-proc/: Cargo.toml
crates/rustcheevos-proc/src/: lib.rs
crates/rustcheevos-schema/: Cargo.toml
crates/rustcheevos-schema/src/: lib.rs  notes.rs  rich.rs
crates/rustcheevos-schema/src/user/: mod.rs
crates/rustcheevos/src/: lib.rs  prelude.rs
crates/rustcheevos/src/parsers/: flag.rs  memory.rs  operator.rs  requirement.rs  value.rs
crates/rustcheevos/src/schema/: rich.rs
crates/rustcheevos/src/schema/user/: mod.rs
crates/rustcheevos/src/types/: achievement.rs  game.rs  leaderboard.rs  memory.rs  mod.rs  note.rs  operator.rs  value.rs
crates/rustcheevos/src/types/chain/: mod.rs  pending.rs
crates/rustcheevos/src/types/flag/: mod.rs  traits.rs
crates/rustcheevos/src/types/requirement/: arithmetic.rs  mod.rs
crates/rustcheevos/src/types/requirement/condition/: hits.rs  mod.rs
crates/rustcheevos/src/types/rich/: format.rs  lookup.rs  mod.rs
crates/rustcheevos/src/types/rich/macros/: builtin.rs  mod.rs
crates/rustcheevos/src/util/: mod.rs
rustcheevos-proc/: Cargo.toml
rustcheevos-proc/src/: lib.rs
src/: lib.rs  macros.rs  prelude.rs
src/parsers/: flag.rs  memory.rs  mod.rs  operator.rs  requirement.rs  value.rs
src/schema/: game.rs  mod.rs  rich.rs  user.rs
src/schema/user/: header.rs  mod.rs
src/types/: accessors.rs  achievement.rs  condition.rs  flag.rs  game.rs  leaderboard.rs  memory.rs  mod.rs  note.rs  operator.rs  set.rs  source.rs  value.rs
src/types/chain/: mod.rs  pending.rs
src/types/flag/: mod.rs  traits.rs
src/types/requirement/: arithmetic.rs  group.rs  mod.rs
src/types/requirement/comparison/: hits.rs  mod.rs
src/types/requirement/condition/: mod.rs
src/types/rich/: format.rs  lookup.rs  mod.rs
src/types/rich/macros/: builtin.rs  mod.rs
