[package]
name = "rustcheevos"
version = "0.1.0"
edition = "2024"

[dependencies]
winnow = "1.0.2"
thiserror = "1.0"
rustcheevos-proc = { path = "rustcheevos-proc" }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
missing_docs_in_private_items = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
