[package]
name = "rustcheevos"
version = "0.1.0"
edition = "2024"
description = "A library for building RetroAchievements sets and more using Rust"
license = "MIT"
repository = "https://github.com/zeapoz/rustcheevos"
keywords = ["retroachievements"]
readme = "README.md"

[dependencies]
winnow = "1.0.2"
thiserror = "1.0"
rustcheevos-proc = { path = "rustcheevos-proc" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
missing_docs_in_private_items = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
