[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
heck = "0.5"
rustcheevos = { path = "crates/rustcheevos" }
rustcheevos-schema = { path = "crates/rustcheevos-schema" }
rustcheevos-proc = { path = "crates/rustcheevos-proc" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
missing_docs_in_private_items = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
