[package]
name = "rustcheevos-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
heck.workspace = true
rustcheevos.workspace = true
rustcheevos-schema.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
