[package]
name = "rustcheevos"
version = "0.1.0"
edition = "2024"
description = "A library for building RetroAchievements sets and more using Rust"
license = "MIT"
repository = "https://github.com/zeapoz/rustcheevos"
keywords = ["retroachievements"]
readme = "../../README.md"

[dependencies]
winnow = "1.0.2"
thiserror = "1.0"
rustcheevos-proc = { path = "../rustcheevos-proc" }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
